--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  amartyadash
 
 # Build settings
-theme: minima
+theme: jekyll-theme-minimal
 # remote_theme: pages-themes/cayman@v0.2.0
 # plugins:
 # - jekyll-remote-theme
