--- a/_config.yml
+++ b/_config.yml
@@ -19,10 +19,12 @@
 # in the templates via {{ site.myvariable }}.
 
 title: My Portfolio
-author: Amartya Dash
-email: work.amartyadash@gmail.com
+author: 
+  name: Amartya Dash
+  email: work.amartyadash@gmail.com
+
 # description: >- # this means to ignore newlines until "baseurl:"
-  # This site was built using Github Pages
+  # 🍻
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 # linked: jekyllrb
@@ -36,6 +38,10 @@ theme: minima
 plugins:
   - jekyll-feed
 
+minima:
+  social_links:
+    github: amartyadash
+    instagram: amartya.dash
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
