--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: My Portfolio
+
 author: 
   name: Amartya Dash
   email: work.amartyadash@gmail.com
@@ -28,7 +29,7 @@ author:
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 # linked: jekyllrb
-github_username:  amartyadash
+github_username: amartyadash
 
 # Build settings
 theme: minima
@@ -37,12 +38,26 @@ theme: minima
 # - jekyll-remote-theme
 plugins:
   - jekyll-feed
+  - jekyll-seo-tag
 
 minima:
   social_links:
     github: amartyadash
     instagram: amartya.dash
     stackoverflow: "10301460"
+  skin: dark
+
+show_excerpts: true
+
+header_pages:
+  - about.md
+  - education.md
+  - experience.md
+  - projects.md
+  - resume.md
+
+google_analytics: UA-NNNNNNNN-N
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
