--- a/_config.yml
+++ b/_config.yml
@@ -24,10 +24,10 @@ author:
   name: Amartya Dash
   email: work.amartyadash@gmail.com
 
-# description: >- # this means to ignore newlines until "baseurl:"
-
+description: >- # this means to ignore newlines until "baseurl:"
+  Amartya Dash
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://amartyadash.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 # linked: jekyllrb
 github_username: amartyadash
 
