--- a/_config.yml
+++ b/_config.yml
@@ -58,6 +58,11 @@ header_pages:
 
 google_analytics: UA-NNNNNNNN-N
 
+defaults:
+  - scope:
+      path: ""
+    values:
+      image: images/lead-bg.jpg
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
