--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   email: work.amartyadash@gmail.com
 
 description: >- # this means to ignore newlines until "baseurl:"
-  Amartya Dash \| IITK \| HSBC
+  Amartya Dash \| IITK
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://amartyadash.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 # linked: jekyllrb
