Add twitter link

--- a/_config.yml
+++ b/_config.yml
@@ -45,6 +45,7 @@ minima:
     github: amartyadash
     instagram: amartya.dash
     stackoverflow: "10301460"
+    twitter: Poodlewarhog123
   skin: dark
 
 show_excerpts: true
