Update twitter link

--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ minima:
     github: amartyadash
     instagram: amartya.dash
     stackoverflow: "10301460"
-    twitter: Poodlewarhog123
+    twitter: amartya_dash_
   skin: dark
 
 show_excerpts: true
